// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Text Actions 1`] = `
Array [
  <p>
    Actions are a bit laggy because of the @storybook/addon-actions. Prod performance is not affected.
  </p>,
  <div
    className="FormField__Wrapper-ydn0fr-0 kMOuNd"
  >
    <label
      className="FormLabel__StyledLabel-skax1c-0 VHIlu"
      hidden={false}
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          Label 
        </div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <div
            className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
          >
            <input
              className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              placeholder="Placeholder"
              type="text"
            />
          </div>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Text Alternating Types 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="FormField__Wrapper-ydn0fr-0 kMOuNd"
    >
      <label
        className="FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
          >
            email 
          </div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                type="email"
              />
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
  <div>
    <div
      className="FormField__Wrapper-ydn0fr-0 kMOuNd"
    >
      <label
        className="FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
          >
            password 
          </div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                type="password"
              />
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
  <div>
    <div
      className="FormField__Wrapper-ydn0fr-0 kMOuNd"
    >
      <label
        className="FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
          >
            search 
          </div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                type="search"
              />
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
  <div>
    <div
      className="FormField__Wrapper-ydn0fr-0 kMOuNd"
    >
      <label
        className="FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
          >
            search 
          </div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <div
              className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                type="submit"
              />
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</form>
`;

exports[`Storyshots Molecules | Input / Text Both addons 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iQXYwt"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 gFEiIR"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 eBobVi"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled +addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 lznLI"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 gFEiIR"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 eBobVi"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 kA-dxnu"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Edge cases 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Long values
    </div>
    <div>
      <div
        className="FormField__Wrapper-ydn0fr-0 kMOuNd"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Too long label, goes into ellipsis. Consider smaller label or bigger input 
            </div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              <div
                className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
              >
                <input
                  className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                  placeholder="If placeholder goes too long though, it probably should be truncated into ellipsis, right?"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
          >
            This is much neccessary info wow
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Long extraInfo
    </div>
    <div>
      <div
        className="FormField__Wrapper-ydn0fr-0 kMOuNd"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Small label 
            </div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              <div
                className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
              >
                <input
                  className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                  placeholder=""
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
          >
            Big extra fat extraInfo that will wrap over many lines. Be careful with this pattern, use it only with small texts!
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Error if empty text 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        My awesome text field 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            aria-invalid={true}
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 jdsQij"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra info below 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra info with error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        My awesome text field 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            aria-invalid={true}
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 jdsQij"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Full width 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Full width inputs
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 hSHDlv"
          width="100%"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Left addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 hSHDlv"
          width="100%"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 DNqQY"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 gFEiIR"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Right addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 hSHDlv"
          width="100%"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 eTHSiK"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 eBobVi"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Hidden label 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Left addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 DNqQY"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 gFEiIR"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Required 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Required
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With star
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label *
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Right addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 eTHSiK"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 eBobVi"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Simple login form 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eZXbOw"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hrRNUt"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fDpmzJ"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 hSHDlv"
        width="100%"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Username 
            </div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              <div
                className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
              >
                <input
                  className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
                  placeholder="Username"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
          >
            Please provide your username (worst UX right here)
          </span>
        </div>
      </div>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 fDpmzJ"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 hSHDlv"
        width="100%"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Password 
            </div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              <div
                className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
              >
                <input
                  aria-invalid={true}
                  className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 jdsQij"
                  placeholder="Password"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
          >
            <div
              className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
            >
              Error: 
            </div>
            Simple error
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hJsTgX"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 chxgx"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Login
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Small 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Size = "s"
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 kwigCG"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Full width
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 hSHDlv"
          width="100%"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 kwigCG"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Error
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    aria-invalid={true}
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 fongcK"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
          <div>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
            >
              <div
                className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Left addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 cXdEtd"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 gFEiIR"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Right addon
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <div
                  className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
                >
                  <input
                    className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 cawQjT"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Text__AddonBox-sc-11cwodo-2 eBobVi"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Success 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 kkAiKh"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With auto focus 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            autoFocus={true}
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With default value (Uncontrolled behaviour) 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            defaultValue="Some predefined text"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With maxLength 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        has max length 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            maxLength={3}
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With tooltip as label addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
        <svg
          aria-hidden="false"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR FormField__TooltipIcon-ydn0fr-1 ioayVJ"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="Questionmark__StyledCircle-sc-1uxskjf-0 gHSezF"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
          <title>
            Tooltip content
          </title>
        </svg>
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With value (Controlled behaviour) 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Text__Wrapper-sc-11cwodo-1 dLRNwJ"
        >
          <input
            className="NormalizedInput__Input-sc-1m4kmh9-0 Text__Input-sc-11cwodo-0 iftejb"
            placeholder="Placeholder"
            type="text"
            value="Some predefined text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;
